# searchalgorithm

./: CMakeLists.txt  README.md
src/: boyermoorehorspoolsearch.cpp  boyermoorehorspoolsearch.h  main.cpp  needle.cpp  needle.h  searchresults.cpp  searchresults.h
